--- a/public/form.html
+++ b/public/form.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <base target="_top">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ekkaa Electronics Customer Complaint</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
     <style>
+        /* Aapka original CSS yahan same rahega, koi change nahi */
         body {
             font-family: 'Poppins', Arial, sans-serif;
             background-color: #f5f5f5;
@@ -65,7 +65,6 @@
             transform: translateY(-5px);
             box-shadow: 0 6px 20px rgba(0, 0, 0, 0.15);
         }
-        /* Custom Scrollbar */
         .form-container::-webkit-scrollbar {
             width: 6px;
         }
@@ -178,7 +177,6 @@
             0% { transform: translate(-50%, -50%) rotate(0deg); }
             100% { transform: translate(-50%, -50%) rotate(360deg); }
         }
-        /* Popup Styles */
         .popup {
             display: none;
             position: fixed;
@@ -227,7 +225,6 @@
             from { opacity: 0; transform: translate(-50%, -40%); }
             to { opacity: 1; transform: translate(-50%, -50%); }
         }
-        /* File Upload Container and Actions */
         .file-upload-container {
             position: relative;
             margin-bottom: 15px;
@@ -259,7 +256,6 @@
         .replace-btn:hover {
             background: #e0a800;
         }
-        /* Responsive Design */
         @media (max-width: 768px) {
             .container {
                 flex-direction: column;
@@ -500,8 +496,8 @@
             document.getElementById(inputId).click();
         };
 
-        // Form submission with file content
-        document.getElementById('myForm').onsubmit = function(event) {
+        // Form submission with fetch API for Vercel
+        document.getElementById('myForm').addEventListener('submit', async function(event) {
             event.preventDefault();
             const loader = document.getElementById('loader');
             const popup = document.getElementById('submissionPopup');
@@ -510,65 +506,38 @@
 
             loader.style.display = 'block';
 
-            const file1Input = document.getElementById('fileUpload1');
-            const file2Input = document.getElementById('fileUpload2');
+            // Prepare form data
+            const formData = new FormData(this);
 
-            // Function to convert file to base64
-            const readFileAsBase64 = (file) => {
-                return new Promise((resolve, reject) => {
-                    const reader = new FileReader();
-                    reader.onload = () => resolve(reader.result);
-                    reader.onerror = reject;
-                    reader.readAsDataURL(file);
+            try {
+                const response = await fetch('/api/submit', {
+                    method: 'POST',
+                    body: formData
                 });
-            };
 
-            // Prepare form data with file content
-            Promise.all([
-                file1Input.files[0] ? readFileAsBase64(file1Input.files[0]) : Promise.resolve(''),
-                file2Input.files[0] ? readFileAsBase64(file2Input.files[0]) : Promise.resolve('')
-            ]).then(([file1Base64, file2Base64]) => {
-                const formData = {
-                    complaintDate: document.getElementById('complaintDate').value,
-                    location: document.getElementById('location').value,
-                    partyName: document.getElementById('partyName').value,
-                    contactPerson: document.getElementById('contactPerson').value,
-                    modelNo: document.getElementById('modelNo').value,
-                    complaint: document.getElementById('complaint').value,
-                    serialNo: document.getElementById('serialNo').value,
-                    customerMobile: document.getElementById('customerMobile').value,
-                    fileUpload1: file1Base64, // Base64 encoded file content
-                    fileUpload1Name: file1Input.files[0] ? file1Input.files[0].name : '',
-                    fileUpload1MimeType: file1Input.files[0] ? file1Input.files[0].type : '',
-                    fileUpload2: file2Base64,
-                    fileUpload2Name: file2Input.files[0] ? file2Input.files[0].name : '',
-                    fileUpload2MimeType: file2Input.files[0] ? file2Input.files[0].type : ''
-                };
+                const result = await response.json();
 
-                google.script.run.withSuccessHandler(function(response) {
-                    loader.style.display = 'none';
+                loader.style.display = 'none';
+
+                if (result.success) {
                     popup.className = 'popup success';
                     popupTitle.innerText = 'Success!';
                     popupMessage.innerText = 'Complaint registered successfully!';
                     popup.style.display = 'block';
-                    document.getElementById('myForm').reset();
+                    this.reset(); // Reset the form
                     document.getElementById('fileActions1').style.display = 'none';
                     document.getElementById('fileActions2').style.display = 'none';
-                }).withFailureHandler(function(error) {
-                    loader.style.display = 'none';
-                    popup.className = 'popup error';
-                    popupTitle.innerText = 'Error';
-                    popupMessage.innerText = 'Error submitting complaint: ' + error.message;
-                    popup.style.display = 'block';
-                }).submitForm(formData);
-            }).catch(error => {
+                } else {
+                    throw new Error(result.error || 'Unknown error occurred');
+                }
+            } catch (error) {
                 loader.style.display = 'none';
                 popup.className = 'popup error';
                 popupTitle.innerText = 'Error';
-                popupMessage.innerText = 'Error reading files: ' + error.message;
+                popupMessage.innerText = 'Error submitting complaint: ' + error.message;
                 popup.style.display = 'block';
-            });
-        };
+            }
+        });
 
         // Function to close the popup
         function closePopup() {
